# x97

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  client.go  go.mod  go.sum  ui.fbp  x97.go  x97_test.go
cli/: main.go
inc/: X97.h  x97.h
proto/: x97.go  x97_test.go
src/: MM3.h  SerialPort.h  X97.cpp  main.cpp
tests/: main.cpp
